--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mi página web</title>
+  <title>APARTA HOTEL ESTADIO GOLD</title>
 </head>
 <body>
-  <h1>Mi página web</h1>
-  <h2>Subtítulo 1</h2>
-  <p>Parrafo 1</p>
-  <p>Parrafo 2</p>
-  <p>Parrafo 3</p>
-  <p>Parrafo 4</p>
-  <p>Parrafo 5</p>
-  <h2>Subtítulo 2</h2>
-  <p>Parrafo 6</p>
-  <p>Parrafo 7</p>
-  <p>Parrafo 8</p>
+  <h1>APARTA HOTEL ESTADIO GOLD</h1>
+  <h2>ACERCA DE</h2>
+  <p>Bienvenidos 
+
+En Estadio Gold, nos enorgullece ofrecer a nuestros huéspedes una experiencia única y memorable en una de las mejores ubicaciones de medellin, nos esforzamos por ser tu hogar lejos del casa, en esta vibrante ciudad.</p>
+  <p>Ubivcaod en Laureles Estadio en Medellín, nuestro Aparta hotel te ofrece la combinacion perfecta de conveniencia y confort.</p>
+  <p>Ya sea que estes  aqui por negocios o por placer, entontrarás todo lo que necesitas para una estancia calida.</p>
+  <p>Desde nuestra acogedora instalación hasta nuestra excelente ubicación a dos cuadras del metro, estamos comprometidos a brindarte una experiencia unica que te hará sentir como en casa.</p>
+  <p>Esperamos darte la bienvenida pronto a Estadio Gold y brindarte una experiencia que recordaras por mucho tiempo, Gracias Por elegirnos como tu destino de alojamiento!</p>
+  <h2>CONTACTANOS</h2>
+  <p>Aparta hotel Estadio Gold</p>
+  <p>+57 3204592918</p>
+  <p>estadiogold2024@gmail.com</p>
   <p>Parrafo 9</p>
   <p>Parrafo 10</p>
 </body>
